# reaktoro

./: .clang-format  .cproject  .directory  .gitignore  .gitmodules  .pre-commit-config.yaml  .project  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.md  CONTRIBUTORS.rst  INSTALL.md  INSTALL.rst  README.md  README.rst  appveyor.yml  compile_commands.json  environment.devenv.yml  environment.yml  install  pytest.ini  tasks.py
.archive/docs/: CMakeLists.txt
PyReaktor/: CMakeLists.txt  PyCommon.hpp  PyCore.hpp  PyEquilibrium.hpp  PyInterfaces.hpp  PyMain.cpp  PyOptimization.hpp
PyReaktor/Common/: PyChemicalVector.cpp  PyChemicalVector.hpp  PyEigen.cpp  PyEigen.hpp  PyIndex.cpp  PyIndex.hpp  PyMatrix.cpp  PyMatrix.hpp  PyOutputter.cpp  PyOutputter.hpp  PyStandardTypes.cpp  PyStandardTypes.hpp  StandardTypes.cpp
PyReaktor/Core/: PyChemicalState.cpp  PyChemicalState.hpp  PyChemicalSystem.cpp  PyChemicalSystem.hpp  PyCoreUtils.cpp  PyCoreUtils.hpp  PyElement.cpp  PyElement.hpp  PyMultiphase.cpp  PyMultiphase.hpp  PyPartition.cpp  PyPartition.hpp  PyPhase.cpp  PyReaction.cpp  PyReaction.hpp  PySpecies.cpp  PyUtils.cpp  PyUtils.hpp
PyReaktor/Equilibrium/: PyEquilibriumOptions.cpp  PyEquilibriumOptions.hpp  PyEquilibriumProblem.cpp  PyEquilibriumProblem.hpp  PyEquilibriumResult.cpp  PyEquilibriumResult.hpp  PyEquilibriumSolver.cpp  PyEquilibriumSolver.hpp  PyEquilibriumState.cpp  PyEquilibriumState.hpp  PyEquilibriumUtils.cpp  PyEquilibriumUtils.hpp
PyReaktor/Interfaces/: PyGems.cpp  PyGems.hpp  PyPhreeqx.cpp  PyPhreeqx.hpp
PyReaktor/Optimization/: PyOptimumOptions.cpp  PyOptimumOptions.hpp  PyOptimumResult.cpp  PyOptimumResult.hpp  PyOptimumState.cpp  PyOptimumState.hpp
PyReaktor/Utils/: Converters.hxx  PyConverters.hpp  PyConverters.hxx
PyReaktoro/: CMakeLists.txt  PyCommon.hpp  PyCore.hpp  PyEquilibrium.hpp  PyInterfaces.hpp  PyKinetics.hpp  PyMain.cpp  PyReactions.hpp  PyThermodynamics.hpp
PyReaktoro/Common/: PyChemicalVector.cpp  PyChemicalVector.hpp  PyMatrix.hpp  PyReactionEquation.cpp  PyStandardTypes.cpp  PyThermoScalar.hpp  PyUnits.cpp
PyReaktoro/Core/: PyChemicalOutput.cpp  PyChemicalOutput.hpp  PyChemicalPlot.cpp  PyChemicalPlot.hpp  PyChemicalState.cpp  PyChemicalState.hpp  PyChemicalSystem.cpp  PyConnectivity.cpp  PyElement.cpp  PyElement.hpp  PyPartition.cpp  PyPartition.hpp  PyPhase.cpp  PyPhase.hpp  PyReaction.cpp  PyReactionSystem.cpp  PySpecies.cpp
PyReaktoro/Equilibrium/: PyEquilibriumOptions.cpp  PyEquilibriumOptions.hpp  PyEquilibriumPath.cpp  PyEquilibriumPath.hpp  PyEquilibriumResult.cpp  PyEquilibriumSolver.cpp  PyEquilibriumSolver.hpp
PyReaktoro/Interfaces/: PyPhreeqx.hpp
PyReaktoro/Kinetics/: PyKineticOptions.cpp  PyKineticOptions.hpp  PyKineticPath.cpp  PyKineticSolver.cpp
PyReaktoro/Math/: PyODE.cpp  PyODE.hpp
PyReaktoro/Optimization/: PyOptimumOptions.cpp  PyOptimumResult.hpp  PyOptimumState.cpp
PyReaktoro/Reactions/: PyMineralCatalyst.hpp
PyReaktoro/Thermodynamics/: PyChemicalEditor.cpp  PyChemicalEditor.hpp  PyDatabase.hpp
PyReaktoro/Utils/: PyConverters.hpp  PyConverters.hxx
Reaktor/: .cproject  .gitignore  .project  CMakeLists.txt  Reaktor.hpp
Reaktor/Activity/: ActivityUtils.cpp  ActivityUtils.hpp  ActivityUtils.hxx  AqueousActivity.hpp  AqueousActivityDrummond.cpp  AqueousActivityDrummond.hpp  AqueousActivityDuanSun.cpp  AqueousActivityDuanSun.hpp  AqueousActivityHKF.cpp  AqueousActivityHKF.hpp  AqueousActivityIdeal.cpp  AqueousActivityIdeal.hpp  AqueousActivityPitzer.cpp  AqueousActivityPitzer.hpp  AqueousActivityRumpf.cpp  AqueousActivityRumpf.hpp  AqueousActivitySetschenow.cpp  AqueousActivitySetschenow.hpp  GaseousActivity.hpp  GaseousActivityDuanSun.cpp  GaseousActivityDuanSun.hpp  GaseousActivityIdeal.cpp  GaseousActivityIdeal.hpp  GaseousActivityPengRobinson.cpp  GaseousActivityPengRobinson.hpp  GaseousActivitySpycherPruess.cpp  GaseousActivitySpycherPruess.hpp  GaseousActivitySpycherReed.cpp  GaseousActivitySpycherReed.hpp  MineralActivity.hpp  MineralActivityIdeal.cpp  MineralActivityIdeal.hpp
Reaktor/Common/: ChemicalScalar.cpp  ChemicalScalar.hpp  ChemicalVector.cpp  Constants.hpp  (+38 more)
Reaktoro/: AggregateState.cpp  AggregateState.hpp  CMakeLists.txt  Common.hpp  Common.py.cxx  Common[py].cxx  Core.hpp  Core.py.cxx  Core[py].cxx  Equilibrium-py.cxx  Equilibrium.hpp  Equilibrium.py.cxx  Extensions-py.cxx  Extensions.hpp  Extensions.py.cxx  Interfaces.hpp  Interpreter.hpp  Kinetics.hpp  Kinetics.py.cxx  Math.hpp  Models-py.cxx  Models.hpp  Models.py.cxx  Optimization.hpp  Reaktoro.hpp  Reaktoro.md  Reaktoro.py  Reaktoro.py.cxx  Reaktoro.test.cxx  Serialization.hpp  Serialization.py.cxx  Singletons.hpp  Singletons.py.cxx  Thermodynamics-py.cxx  Thermodynamics.hpp  Thermodynamics.py.cxx  Thermodynamics[py].cxx  Transport.hpp  Transport.py.cxx  Utils.hpp  (+6 more)
ReaktoroInterpreterCpp/: AutomationUtils.cpp  AutomationUtils.hpp  CMakeLists.txt  ConvertUtils.cpp  ConvertUtils.hpp  Interpreter.cpp  Interpreter.hpp  InterpreterState.cpp  InterpreterState.hpp  KeywordConverters.cpp  KeywordConverters.hpp  KeywordTypes.cpp  Keywords.hpp  KeywordsOperators.cpp  KeywordsOperators.hpp  Main.cpp  ParserOperators.cpp  ParserOperators.hpp  ParserUtils.cpp  ParserUtils.hpp  ProcessUtils.cpp  ProcessUtils.hpp  YamlUtils.cpp
demos/: CMakeLists.txt
dependencies/: CMakeLists.txt
interpreter/: CMakeLists.txt  ireaktoro.cpp  setup.py.in
python/: CMakeLists.txt  Core.cpp  Core.hpp  Module.cpp  Reaktor.cpp  setup.py.in
reaktoro/: CMakeLists.txt  setup.py.in
swig/: CMakeLists.txt  Reaktor.i
tests/: CMakeLists.txt  TestMain.cpp  conftest.py  oilphase_test_CH4_without_water.py  oilphase_test_bi_tri_mixture.py  oilphase_test_single_mixture.py  pytest.ini.in  python_tools.py  test_chemicaleditor.py  test_chemicaloutput_extension.py  test_chemicalproperties.py  test_chemicalsystem.py  test_cubiceos.py  test_database.py  test_equilibriumproblem.py  test_equilibriumsolver.py  test_euniquacparams.py  test_oil_equilibrium.py  test_phase.py  test_reaktoro_dicts.py  test_reaktoro_misc.py  test_thermodata.py
(+5376 files in other folders)
